[package]
name = "async-vfs"
version = "0.9.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
license = "MIT"
description = "Async Virtual File System"
repository = "https://github.com/prabirshrestha/async-vfs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.42"
thiserror = "1.0.23"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
