[package]
name = "async-vfs"
version = "0.20.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
license = "MIT"
description = "Async Virtual File System"
repository = "https://github.com/prabirshrestha/async-vfs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
cfg-if = "1.0.0"
futures-lite = "1.12.0"
thiserror = "1.0.23"
async-std = { version = "1.6.0", features = [ "attributes" ], optional = true }

[features]
runtime-async-std = ["async-std"]
default = []
