[package]
name = "async-vfs"
version = "0.56.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2021"
license = "MIT"
description = "Async Virtual File System"
repository = "https://github.com/prabirshrestha/async-vfs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures-lite = "1.13.0"
thiserror = "1.0.49"
